@@ -23,11 +23,24 @@ protobuf {
     protoc {
         artifact = "com.google.protobuf:protoc:3.25.0"
     }
-    generatedFilesBaseDir = "$projectDir/src/generated"
 }
 
-sourceSets["main"].java.srcDir("$projectDir/src/generated/main/java")
+sourceSets["main"].java.srcDirs(
+    "src/main/java"
+)
 
 tasks.test {
     useJUnitPlatform()
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-preview")
+}
+
+tasks.withType<JavaExec>().configureEach {
+    jvmArgs("--enable-preview")
 }
